--- a/portfolio.html
+++ b/portfolio.html
@@ -43,114 +43,110 @@
       </address>
     </header>
     <main>
-      <section class="accent-background">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="order-button" type="button">Order Service</button>
-      </section>
       <section>
-        <h2 hidden>Our features</h2>
+        <h1 hidden>Our portfolio</h1>
         <ul class="list-unmark">
+          <li><button class="filter-button" type="button">All</button></li>
+          <li><button class="filter-button" type="button">Web Site</button></li>
+          <li><button class="filter-button" type="button">App</button></li>
+          <li><button class="filter-button" type="button">Design</button></li>
           <li>
-            <h3 class="card-title">Strategy</h3>
-            <p class="main-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="card-title">Punctuality</h3>
-            <p class="main-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="card-title">Diligence</h3>
-            <p class="main-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="card-title">Technologies</h3>
-            <p class="main-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
+            <button class="filter-button" type="button">Marketing</button>
           </li>
         </ul>
       </section>
       <section>
-        <h2 class="section-title">What are we doing</h2>
+        <h2 hidden>Portfolio filtering results</h2>
         <ul class="list-unmark">
           <li>
             <img
-              src="./images/card-1.jpg"
-              alt="Web design for Desktop"
+              src="./images/portfolio/img-portf-1.jpg"
+              alt="Banking App Interface Concept"
               width="360"
               height="300"
             />
+            <h3 class="card-title">Banking App Interface Concept</h3>
+            <p class="card-description">App</p>
           </li>
           <li>
             <img
-              src="./images/card-2.jpg"
-              alt="Web design for Mobile"
+              src="./images/portfolio/img-portf-2.jpg"
+              alt="Cashless Payment"
               width="360"
               height="300"
             />
-          </li>
-          <li>
-            <img
-              src="./images/card-3.jpg"
-              alt="Mediation Applications"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2 class="section-title">Our Team</h2>
-        <ul class="list-unmark">
-          <li>
-            <img
-              src="./images/team-1.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="card-title">Mark Guerrero</h3>
-            <p class="card-description">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team-2.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="card-title">Tom Ford</h3>
-            <p class="card-description">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team-3.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="card-title">Camila Garcia</h3>
+            <h3 class="card-title">Cashless Payment</h3>
             <p class="card-description">Marketing</p>
           </li>
           <li>
             <img
-              src="./images/team-4.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
+              src="./images/portfolio/img-portf-3.jpg"
+              alt="Meditation Application"
+              width="360"
+              height="300"
             />
-            <h3 class="card-title">Daniel Wilson</h3>
-            <p class="card-description">UI Designer</p>
+            <h3 class="card-title">Meditation App</h3>
+            <p class="card-description">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-portf-4.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+            <h3 class="card-title">Taxi Service</h3>
+            <p class="card-description">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-portf-5.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
+            <h3 class="card-title">Screen Illustrations</h3>
+            <p class="card-description">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-portf-6.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h3 class="card-title">Online Courses</h3>
+            <p class="card-description">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-portf-7.jpg"
+              alt="Instagram Stories Concept"
+              width="360"
+              height="300"
+            />
+            <h3 class="card-title">Instagram Stories Concept</h3>
+            <p class="card-description">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-portf-8.jpg"
+              alt="Organic Food"
+              width="360"
+              height="300"
+            />
+            <h3 class="card-title">Organic Food</h3>
+            <p class="card-description">Web Site</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-portf-9.jpg"
+              alt="Fresh Coffee"
+              width="360"
+              height="300"
+            />
+            <h3 class="card-title">Fresh Coffee</h3>
+            <p class="card-description">Web Site</p>
           </li>
         </ul>
       </section>
