[*] correct markup and styling

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <header>
       <nav>
         <a class="logotype-text link" href="./index.html"
-          ><span class="logotype-text-prefix">web</span>studio</a
+          >web<span class="logotype-text-prefix">Studio</span></a
         >
-        <ul class="list-unmark">
+        <ul class="list">
           <li><a class="menu-link link" href="./index.html">Studio</a></li>
           <li>
             <a class="menu-link link" href="./portfolio.html">Portfolio</a>
@@ -27,8 +27,8 @@
           <li><a class="menu-link link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul class="list-unmark">
+      <address class="address-text">
+        <ul class="list">
           <li>
             <a class="address-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -49,7 +49,7 @@
       </section>
       <section>
         <h2 hidden>Our features</h2>
-        <ul class="list-unmark">
+        <ul class="list">
           <li>
             <h3 class="card-title">Strategy</h3>
             <p class="main-text">
@@ -82,7 +82,7 @@
       </section>
       <section>
         <h2 class="section-title">What are we doing</h2>
-        <ul class="list-unmark">
+        <ul class="list">
           <li>
             <img
               src="./images/card-1.jpg"
@@ -109,10 +109,10 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="light-background">
         <h2 class="section-title">Our Team</h2>
-        <ul class="list-unmark">
-          <li>
+        <ul class="list">
+          <li class="card-backgound">
             <img
               src="./images/team-1.jpg"
               alt="Mark Guerrero"
@@ -122,7 +122,7 @@
             <h3 class="card-title">Mark Guerrero</h3>
             <p class="card-description">Product Designer</p>
           </li>
-          <li>
+          <li class="card-backgound">
             <img
               src="./images/team-2.jpg"
               alt="Tom Ford"
@@ -132,7 +132,7 @@
             <h3 class="card-title">Tom Ford</h3>
             <p class="card-description">Frontend Developer</p>
           </li>
-          <li>
+          <li class="card-backgound">
             <img
               src="./images/team-3.jpg"
               alt="Camila Garcia"
@@ -142,7 +142,7 @@
             <h3 class="card-title">Camila Garcia</h3>
             <p class="card-description">Marketing</p>
           </li>
-          <li>
+          <li class="card-backgound">
             <img
               src="./images/team-4.jpg"
               alt="Daniel Wilson"
@@ -157,8 +157,7 @@
     </main>
     <footer class="accent-background">
       <a class="logotype-text link" href="./index.html"
-        ><span class="logotype-text-prefix">web</span
-        ><span class="logotype-text-footer">studio</span></a
+        >web<span class="logotype-text-footer">studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
