--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,9 @@
     <header>
       <nav>
         <a class="logotype-text link" href="./index.html"
-          ><span class="logotype-text-prefix">web</span>studio</a
+          >web<span class="logotype-text-prefix">Studio</span></a
         >
-        <ul class="list-unmark">
+        <ul class="list">
           <li><a class="menu-link link" href="./index.html">Studio</a></li>
           <li>
             <a class="menu-link link" href="./portfolio.html">Portfolio</a>
@@ -27,8 +27,8 @@
           <li><a class="menu-link link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul class="list-unmark">
+      <address class="address-text">
+        <ul class="list">
           <li>
             <a class="address-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -45,7 +45,7 @@
     <main>
       <section>
         <h1 hidden>Our portfolio</h1>
-        <ul class="list-unmark">
+        <ul class="list">
           <li><button class="filter-button" type="button">All</button></li>
           <li><button class="filter-button" type="button">Web Site</button></li>
           <li><button class="filter-button" type="button">App</button></li>
@@ -54,10 +54,7 @@
             <button class="filter-button" type="button">Marketing</button>
           </li>
         </ul>
-      </section>
-      <section>
-        <h2 hidden>Portfolio filtering results</h2>
-        <ul class="list-unmark">
+        <ul class="list">
           <li>
             <img
               src="./images/portfolio/img-portf-1.jpg"
@@ -153,8 +150,7 @@
     </main>
     <footer class="accent-background">
       <a class="logotype-text link" href="./index.html"
-        ><span class="logotype-text-prefix">web</span
-        ><span class="logotype-text-footer">studio</span></a
+        >web<span class="logotype-text-footer">studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
