[*] correct stiling. list items as links on portfolio page

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </main>
     <footer class="accent-background">
       <a class="logotype-text link" href="./index.html"
-        >web<span class="logotype-text-footer">studio</span></a
+        >web<span class="logotype-text-footer">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
