--- a/portfolio.html
+++ b/portfolio.html
@@ -56,101 +56,119 @@
         </ul>
         <ul class="list">
           <li>
-            <img
-              src="./images/portfolio/img-portf-1.jpg"
-              alt="Banking App Interface Concept"
-              width="360"
-              height="300"
-            />
-            <h3 class="card-title">Banking App Interface Concept</h3>
-            <p class="card-description">App</p>
+            <a class="link" href="">
+              <img
+                src="./images/portfolio/img-portf-1.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+                height="300"
+              />
+              <h3 class="card-title">Banking App Interface Concept</h3>
+              <p class="card-description">App</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-portf-2.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="card-title">Cashless Payment</h3>
-            <p class="card-description">Marketing</p>
+            <a class="link" href=""
+              ><img
+                src="./images/portfolio/img-portf-2.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="card-title">Cashless Payment</h3>
+              <p class="card-description">Marketing</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-portf-3.jpg"
-              alt="Meditation Application"
-              width="360"
-              height="300"
-            />
-            <h3 class="card-title">Meditation App</h3>
-            <p class="card-description">App</p>
+            <a class="link" href=""
+              ><img
+                src="./images/portfolio/img-portf-3.jpg"
+                alt="Meditation Application"
+                width="360"
+                height="300"
+              />
+              <h3 class="card-title">Meditation App</h3>
+              <p class="card-description">App</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-portf-4.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="card-title">Taxi Service</h3>
-            <p class="card-description">Marketing</p>
+            <a class="link" href=""
+              ><img
+                src="./images/portfolio/img-portf-4.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="card-title">Taxi Service</h3>
+              <p class="card-description">Marketing</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-portf-5.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="card-title">Screen Illustrations</h3>
-            <p class="card-description">Design</p>
+            <a class="link" href=""
+              ><img
+                src="./images/portfolio/img-portf-5.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="card-title">Screen Illustrations</h3>
+              <p class="card-description">Design</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-portf-6.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="card-title">Online Courses</h3>
-            <p class="card-description">Marketing</p>
+            <a class="link" href=""
+              ><img
+                src="./images/portfolio/img-portf-6.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="card-title">Online Courses</h3>
+              <p class="card-description">Marketing</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-portf-7.jpg"
-              alt="Instagram Stories Concept"
-              width="360"
-              height="300"
-            />
-            <h3 class="card-title">Instagram Stories Concept</h3>
-            <p class="card-description">Design</p>
+            <a class="link" href=""
+              ><img
+                src="./images/portfolio/img-portf-7.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+                height="300"
+              />
+              <h3 class="card-title">Instagram Stories Concept</h3>
+              <p class="card-description">Design</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-portf-8.jpg"
-              alt="Organic Food"
-              width="360"
-              height="300"
-            />
-            <h3 class="card-title">Organic Food</h3>
-            <p class="card-description">Web Site</p>
+            <a class="link" href=""
+              ><img
+                src="./images/portfolio/img-portf-8.jpg"
+                alt="Organic Food"
+                width="360"
+                height="300"
+              />
+              <h3 class="card-title">Organic Food</h3>
+              <p class="card-description">Web Site</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-portf-9.jpg"
-              alt="Fresh Coffee"
-              width="360"
-              height="300"
-            />
-            <h3 class="card-title">Fresh Coffee</h3>
-            <p class="card-description">Web Site</p>
+            <a class="link" href=""
+              ><img
+                src="./images/portfolio/img-portf-9.jpg"
+                alt="Fresh Coffee"
+                width="360"
+                height="300"
+              />
+              <h3 class="card-title">Fresh Coffee</h3>
+              <p class="card-description">Web Site</p></a
+            >
           </li>
         </ul>
       </section>
     </main>
     <footer class="accent-background">
       <a class="logotype-text link" href="./index.html"
-        >web<span class="logotype-text-footer">studio</span></a
+        >web<span class="logotype-text-footer">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
